# Marvin-VirtualAssistent

./: .gitignore  Marvin.py  README-pt.md  README.md  commands.json  main.py  pyproject.toml
modules/: AlarmModule.py  MusicModule.py  OpenModule.py
utils/: text2int.py
